# QtWhisper

./: CMakeLists.txt
cmake/: QtWhisperConfig.cmake.in
examples/: CMakeLists.txt
examples/helloWorld/: CMakeLists.txt  main.cpp
include/QtWhisper/: Engine.h  IEngine.h  Session.h  Types.h
src/: Engine.cpp  Session.cpp
